Change name and style

--- a/popup.html
+++ b/popup.html
@@ -2,10 +2,14 @@
 <html>
   <head>
     <title>LinkedIn Da Vinci</title>
+    <link href='https://fonts.googleapis.com/css?family=Playball' rel='stylesheet' type='text/css'>
     <style>
       body {
         min-width: 250px;
         text-align: center;
+      }
+      h1 {
+        font-family: 'Playball', arial;
       }
       button {
         background: #0066cc;
@@ -19,20 +23,19 @@
         background: #99ccff;
       }
     </style>
-
+  </head>
+  <body>
+  
     <h1>LinkedIn Da Vinci</h1>
 
-    <button id="button">Prettify LinkedIn</button>
+    <button id="button">Start da Vinci!</button>
 
     <br/><br/>
 
-    <button id="stop">Stop Prettifying</button>
+    <button id="stop">Stop da Vinci</button>
 
     <script src="popup.js"></script>
-  </head>
-  <body>
-    <div id="status"></div>
-    <img id="image-result" hidden>
+
   </body>
 </html>
 
